@@ -1,3 +1,14 @@
+2019-03-25  Carlos Garcia Campos  <cgarcia@igalia.com>
+
+        [GTK][WPE] Do not allow changes in active URI before provisional load starts for non-API requests
+        https://bugs.webkit.org/show_bug.cgi?id=194208
+
+        Reviewed by Michael Catanzaro.
+
+        * UIProcess/API/glib/WebKitWebView.cpp:
+        (webkitWebViewWillStartLoad): Block updates of active URL.
+        (webkitWebViewLoadChanged): Unblock updates of active URL on WEBKIT_LOAD_STARTED.
+
 2019-03-12  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         [WPE][GTK] Load events may occur in unexpected order when JS redirects page before subresource load finishes
